--- a/app/src/main/res/layout/activity_cash.xml
+++ b/app/src/main/res/layout/activity_cash.xml
@@ -11,17 +11,53 @@
         android:id="@+id/recylerCash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <info.hoang8f.widget.FButton
+    <android.support.v7.widget.CardView
+        app:cardBackgroundColor="@color/colorPrimary"
         android:layout_alignParentBottom="true"
-        app:fButtonColor="@color/btnSignActive"
-        android:textColor="@android:color/white"
-        android:text="Thanh toán"
-        android:id="@+id/btnThanhToan_Cash"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:shadowColor="@android:color/black"
-        app:shadowEnabled="true"
-        app:shadowHeight="5dp"
-        android:layout_margin="8dp"
-        app:cornerRadius="4dp"/>
+        android:layout_height="100dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:layout_margin="8dp"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_alignParentBottom="true"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:text="Total: "
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/txtTotal_cash"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"
+                    android:text="$10,000"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+
+            </LinearLayout>
+            <info.hoang8f.widget.FButton
+                android:layout_alignParentBottom="true"
+                app:fButtonColor="@color/btnSignActive"
+                android:textColor="@android:color/white"
+                android:text="Thanh toán"
+                android:id="@+id/btnThanhToan_Cash"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:shadowColor="@android:color/black"
+                app:shadowEnabled="true"
+                app:shadowHeight="5dp"
+                android:layout_margin="8dp"
+                app:cornerRadius="4dp"/>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+
 </RelativeLayout>
