--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,36 +17,36 @@
         android:layout_height="wrap_content">
         <com.rengwuxian.materialedittext.MaterialEditText
             android:inputType="number"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
             android:paddingLeft="10dp"
             android:id="@+id/edtPhoneNumber_SignUp"
             android:text="01654580403"
             android:hint="Phone number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="@android:color/black"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="11"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="@android:color/black"
             app:met_singleLineEllipsis="true"/>
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
             android:paddingLeft="10dp"
             android:id="@+id/edtFullName_SignUp"
             android:text="Tống Minh Nhựt"
             android:hint="Full name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="@android:color/black"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="20"
             app:met_singleLineEllipsis="true"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="@android:color/black"
             />
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:textColorHint="@android:color/white"
+            android:textColorHint="@android:color/black"
             android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:id="@+id/edtPass_SignUp"
@@ -54,13 +54,13 @@
             android:text="123"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="@android:color/black"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="11"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="@android:color/black"
             app:met_singleLineEllipsis="true"/>
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:textColorHint="@android:color/white"
+            android:textColorHint="@android:color/black"
             android:inputType="text"
             android:paddingLeft="10dp"
             android:id="@+id/edtSecureCode_SignUp"
@@ -68,10 +68,10 @@
             android:text="abc123"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="@android:color/black"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="11"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="@android:color/black"
             app:met_singleLineEllipsis="true"/>
 
 
