--- a/app/src/main/res/layout/activity_cash.xml
+++ b/app/src/main/res/layout/activity_cash.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/my_bg"
+    android:background="@drawable/bgorder"
     tools:context="com.tongminhnhut.orderfood_demo.CashActivity">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recylerCash"
