--- a/app/src/main/res/layout/activity_cash_detail.xml
+++ b/app/src/main/res/layout/activity_cash_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/my_bg"
+    android:background="@drawable/bgorder"
     tools:context="com.tongminhnhut.orderfood_demo.CashDetailActivity">
     <android.support.v7.widget.CardView
         android:id="@+id/cardView_OrderDetail"
@@ -39,15 +39,28 @@
                     android:text="Status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="italic"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical|start"
-                    android:id="@+id/txtTotal_CashDetail"
-                    android:text="Total"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/colorAccent"
+                        android:textStyle="italic"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center_vertical|start"
+                        android:id="@+id/txtTotal_CashDetail"
+                        android:text="Total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:textColor="@color/colorAccent"
+                        android:layout_marginLeft="3dp"
+                        android:text="VNĐ"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
 
 
             </LinearLayout>
@@ -62,9 +75,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:textStyle="bold"
             android:layout_marginLeft="8dp"
             android:layout_marginBottom="20dp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="30sp"
             android:text="Detail"
             android:layout_width="match_parent"
