--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgorder"
     tools:context="com.tongminhnhut.orderfood_demo.FoodDetailActivity">
 
     <android.support.design.widget.AppBarLayout
