--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,28 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/my_bg"
+    android:background="@drawable/bgorder"
     tools:context="com.tongminhnhut.orderfood_demo.MainActivity">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/icon_order"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
-        <TextView
-            android:textSize="25sp"
-            android:id="@+id/txtLogan"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:text="I'm not hungry. But I am bored. Therefore i shall eat"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
 
-
-    </LinearLayout>
 
 
     <LinearLayout
