--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/my_bg"
+    android:background="@drawable/bgordersignin"
     tools:context="com.tongminhnhut.orderfood_demo.SignInActivity">
 
     <LinearLayout
@@ -18,21 +18,21 @@
 
 
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black"
             android:paddingLeft="10dp"
             android:id="@+id/edtPhonenumber_SignIp"
             android:text="0"
             android:hint="Phone number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="@android:color/black"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="11"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="@android:color/black"
             app:met_singleLineEllipsis="true"/>
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:textColorHint="@android:color/white"
+            android:textColorHint="@android:color/black"
             android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:id="@+id/edtPass_SignIp"
@@ -40,10 +40,10 @@
             android:text="123"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:met_baseColor="@android:color/white"
+            app:met_baseColor="@android:color/black"
             app:met_floatingLabel="highlight"
             app:met_maxCharacters="11"
-            app:met_primaryColor="@android:color/white"
+            app:met_primaryColor="@android:color/black"
             app:met_singleLineEllipsis="true"/>
 
 
@@ -61,14 +61,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Remember"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 app:cbd_tickColor="@color/colorPrimaryDark"
-                app:cbd_strokeColor="@android:color/white"
+                app:cbd_strokeColor="@android:color/black"
                 />
 
             <TextView
                 android:id="@+id/txtForgotPass"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:text="@string/forgot"
                 android:layout_weight="1"
                 android:layout_width="0dp"
