--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -60,14 +60,26 @@
                 android:text="Food 01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            <TextView
-                android:textStyle="italic"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:id="@+id/txtPrice_CardItem"
-                android:text="10,000"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+
+                    android:textStyle="italic"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical|start"
+                    android:id="@+id/txtPrice_CardItem"
+                    android:text="10,000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginLeft="4dp"
+                    android:text="VNĐ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
 
 
         </LinearLayout>
